--- a/dogs/resources/sass/main.scss
+++ b/dogs/resources/sass/main.scss
@@ -102,6 +102,12 @@ footer{
     border-bottom:#295218 2px dashed;
 }
 
-.navibar_top {
-    background-color: #619455;
+button {
+    background-color: #04AA6D;
+    color: white;
+    padding: 7px 10px;
+    margin: 4px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
 }
