--- a/dogs/public/css/main.css
+++ b/dogs/public/css/main.css
@@ -16,11 +16,6 @@ p {
   height: 100vh;
 }
 
-.flex-center {
-  align-items: center;
-  display: flex;
-  justify-content: center;
-}
 
 .position-ref {
   position: relative;
@@ -112,4 +107,9 @@ button {
     font-size: smaller;
     border: none;
     cursor: pointer;
+}
+.left {
+    align-items: center;
+    display: flex;
+    justify-content: center;
 }
